# mob-ai

./: Dockerfile  README.md  config.yaml  gui.py  main.py  pyproject.toml  run.py  test_openai_integration.py
docs/: openai_integration.md
interfaces/at_risk/: config.yaml
interfaces/sentiment_analysis/: config.yaml
src/: config_manager.py  external_integration.py  log_config.py  main.py  model_adaptor.py  prompt_orchestrator.py  response_handler.py  schemas.py
tests/: test_model_integration.py  test_openai_integration.py
