[project]
name = "mobai-platform"
version = "0.1.0"
description = "A flexible AI integration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "streamlit>=1.45.0",
]
